# visim

./: +  Cargo.toml  README.md  Todo.md
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs  test.frag
src/: color.rs  err.rs  event.rs  lib.rs  program.rs  render_instance.rs  renderer.rs  vector.rs  window.rs
src/render/: buffer.rs  mod.rs  program.rs  shader.rs  texture.rs  vertex.rs  vertex_array.rs
src/shaders/: default.frag  default.vert  triangle.frag  triangle.vert
src/shapes/: line.rs  mod.rs  polygon.rs  triangle.rs
