[package]
name = "visim"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "A package that handles rendering for visualization and simulation"
repository = "https://github.com/Monkvy/visim"
keywords = ["graphics", "simulation", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gl_debug = ["gl_dstruct/debug"]

[dependencies]
sdl2 = "0.35.2"
gl_dstruct = "0.2.0"
